[package]
name = "libscmp"
version = "0.1.0"
edition = "2018"

description = "A safe, sane Rust interface to libseccomp on Linux."
readme = "README.md"
authors = ["cptpcrd"]
license = "MIT"
categories = ["os::linux-apis"]
keywords = ["seccomp", "libseccomp"]
repository = "https://github.com/cptpcrd/libscmp"

[dependencies]
libc = "0.2"
