[package]
name = "libscmp"
version = "0.1.0"
edition = "2018"

description = "A safe, sane Rust interface to libseccomp on Linux."
readme = "README.md"
authors = ["cptpcrd"]
license = "MIT"
categories = ["os::linux-apis"]
keywords = ["seccomp", "libseccomp"]
repository = "https://github.com/cptpcrd/libscmp"

[features]
default = []

# Enable libseccomp v2.4.0+ features (and assume we will always run against libseccomp>=2.4.0)
libseccomp-2-4 = []

# Enable libseccomp v2.5.0+ features (and assume we will always run against libseccomp>=2.5.0)
libseccomp-2-5 = ["libseccomp-2-4"]

[dependencies]
libc = "0.2"

[package.metadata.docs.rs]
all-features = true
